# Nodus

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  MEMORY.md  README.md  RULES.md  SOUL.md  batch_runner.py  cli.py  config.example.json  deploy.bat  deploy.ps1  install.bat  main.py  model_tools.py  nodus_bootstrap.py  nodus_constants.py  nodus_logging.py  nodus_state.py  nodus_time.py  nodus_utils.py  pyproject.toml  requirements.txt  run_agent.py  setup.bat  start.bat  toolsets.py
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  context_compressor.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  iteration_budget.py  jiter_preload.py  memory_manager.py  memory_provider.py  message_sanitization.py  (+31 more)
api/: server.py
brain/: AGENTS.md  SOUL.md  __init__.py  cron.py  dream.py  llm_loop.py  persona.py  planning.py
command/: __init__.py  builtin.py  router.py
config/: config.json  defaults.py  loader.py  paths.py  schema.py
cron/: __init__.py  jobs.py  scheduler.py  service.py
data/: memory_store.py  session_store.py  sessions.db  sessions.db-shm  sessions.db-wal
executor/: __init__.py  approval.py  browser.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_dialog_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  clarify_gateway.py  clarify_tool.py  clawhub.py  code_execution_tool.py  env_probe.py  (+69 more)
(+378 files in other folders)
