[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus"
version = "0.1.0"
description = "灵枢 Nodus — unified agent gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "柒月"}]

dependencies = [
    "openai>=1.0.0",
    "aiohttp>=3.9",
    "pycryptodome>=3.20",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.48"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
nodus = "cli:main"

[tool.setuptools.packages.find]
include = ["brain*", "gateway*", "executor*", "shared*", "data*"]
